--- a/views/book/toc/write.html
+++ b/views/book/toc/write.html
@@ -59,7 +59,7 @@
       >
         <div class="flex-direction-row image-input">
           <div class="bold title">책 구성하기</div>
-          <div class="small-book-image">
+          <div class="small-book-image empty">
             <input
               class="small-book-image input-file"
               type="file"
