--- a/views/user/login.html
+++ b/views/user/login.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>로그인</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700;900&display=swap"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700;900&display=swap"
+            rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/user.css" />
-  </head>
-  <body>
-    <div class="content-wrapper">
-      <div class="window">
+    <link rel="stylesheet" href="../css/index.css"/>
+    <link rel="stylesheet" href="../css/user.css"/>
+    <script defer>
+      {% if error %}
+      alert("입력 값을 확인해 주세요.")
+      {% endif %}
+    </script>
+</head>
+<body>
+<div class="content-wrapper">
+    <div class="window">
         <div class="bold title">로그인</div>
         <form class="flex-direction-column" method="post" action="/users/login">
-          <div class="input">
-            <input
-              type="text"
-              name="userId"
-              placeholder="아이디를 입력해주세요"
-            />
-          </div>
-          <div class="input">
-            <input
-              type="password"
-              name="userPw"
-              placeholder="비밀번호를 입력해주세요"
-            />
-          </div>
-          <div class="button-wrapper">
-            <a href="/users/signup" class="sub-button button">회원가입</a>
-            <button class="main-button button" type="submit">로그인</button>
-          </div>
+            <div class="input">
+                <input
+                        type="text"
+                        name="userId"
+                        placeholder="아이디를 입력해주세요"
+                />
+            </div>
+            <div class="input">
+                <input
+                        type="password"
+                        name="userPw"
+                        placeholder="비밀번호를 입력해주세요"
+                />
+            </div>
+            <div class="button-wrapper">
+                <a href="/users/signup" class="sub-button button">회원가입</a>
+                <button class="main-button button" type="submit">로그인</button>
+            </div>
         </form>
         <div class="reset-password">
-          <div class="ask">비밀번호가 기억나지 않는다면?</div>
-          <a href="/users/reset" class="link">비밀번호 재설정</a>
+            <div class="ask">비밀번호가 기억나지 않는다면?</div>
+            <a href="/users/reset" class="link">비밀번호 재설정</a>
         </div>
-      </div>
     </div>
-  </body>
+</div>
+</body>
 </html>
