--- a/views/public/css/index.css
+++ b/views/public/css/index.css
@@ -106,6 +106,7 @@ img {
 
 .simple-title {
   font-size: 24px;
+  padding: 8px 0;
   cursor: pointer;
 }
 
@@ -213,6 +214,9 @@ img {
   border-radius: 8px;
   cursor: pointer;
   box-shadow: 0 2px 1px #eee;
+}
+.tag.tag-highlight {
+  background-color: #eee;
 }
 
 .slide {
