--- a/views/book/view.html
+++ b/views/book/view.html
@@ -16,6 +16,17 @@
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
     <script defer src="../js/index.js"></script>
+    <script defer>
+        const url = location.href.split("?")[1].split("&")[2].split("=")[1]
+
+        if (url) {
+            if (parseInt(url) === 4040) {
+                alert("이미 추천한 유저입니다.")
+            }
+        }
+
+
+    </script>
 </head>
 <body>
 <div class="top-wrapper">
