--- a/views/user/info.html
+++ b/views/user/info.html
@@ -12,6 +12,12 @@
     />
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/user.css" />
+
+    <script defer>
+      {% if error === 4060 %}
+      alert("닉네임을 입력해 주세요.")
+      {% endif %}
+    </script>
   </head>
   <body>
     <div class="content-wrapper">
@@ -24,13 +30,6 @@
               name="userNickname"
               placeholder="새로운 닉네임을 입력해주세요"
               value="{{user_nickname}}"
-            />
-          </div>
-          <div class="input">
-            <input
-              type="password"
-              name="userPw"
-              placeholder="새로운 비밀번호를 입력해주세요"
             />
           </div>
           <div class="bold simple-title">가입일: {{user_created_at}}</div>
